GL/src/test/deca/context/valid/deca_complet/classe_champ.deca
// Description:
//    test de déclaration d'un champ de classe
//
// Resultats:
//    Ok
//
// Historique:
//    cree le 01/01/2026

class A {
    int x;
}
{
}
